buildscript {
	ext {
		springBootVersion = '4.0.0'
		set('springCloudVersion', "2025.1.0")
	}
	repositories {
		mavenCentral()
	}
	dependencies {
		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
	}
}

plugins {
	id "org.sonarqube" version "6.3.1.5724"
	id 'io.spring.dependency-management' version '1.1.7'
	id 'org.springframework.boot' version '4.0.0'
}

apply plugin: 'java'
apply plugin: 'eclipse'
apply plugin: 'org.springframework.boot'
apply plugin: 'jacoco'

//added to accept systemproperties while executing gradlew test cmd

jar {
	archiveBaseName = 'scsb-circ'
	archiveVersion = '0.0.1-SNAPSHOT'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

repositories {
	mavenCentral()
}


dependencies {
	implementation fileTree(dir: '/data/commonjar',include: '*3.1.jar')
	implementation fileTree(dir: '/data/commonjar', include: 'jsip2-1.1.0.jar')
	implementation fileTree(dir: '/data/commonjar', include: 'ncip-2.0.jar')
	implementation 'org.projectlombok:lombok:1.18.42'
	annotationProcessor 'org.projectlombok:lombok:1.18.42'
	testImplementation 'org.projectlombok:lombok:1.18.42'
	testAnnotationProcessor 'org.projectlombok:lombok:1.18.42'
	implementation('org.springframework.boot:spring-boot-starter-web-services')
	implementation('org.springframework.boot:spring-boot-starter-data-jpa')
	implementation("org.springframework.boot:spring-boot-starter-data-rest")

	implementation 'net.sf.dozer:dozer:5.5.1'
    implementation('org.apache.logging.log4j:log4j-core:3.0.0-beta3')
    implementation('org.apache.commons:commons-lang3:3.20.0')

	implementation('commons-beanutils:commons-beanutils:1.11.0')

	implementation('commons-io:commons-io:2.21.0')
	implementation('io.springfox:springfox-swagger-ui:3.0.0')
	implementation('io.springfox:springfox-swagger2:3.0.0')
	implementation('org.codehaus.jettison:jettison:1.5.4')
	implementation('org.apache.camel.springboot:camel-spring-boot-starter:4.15.0')
    implementation('org.apache.camel.springboot:camel-aws-s3-starter:3.8.0')
    implementation('org.apache.camel:camel-aws-s3:3.8.0')
	implementation('org.apache.camel:camel-activemq:4.15.0')
	implementation('org.apache.camel:camel-core-engine:4.15.0')
	implementation('org.apache.camel:camel-core:4.15.0')
	implementation('org.apache.camel:camel-support:4.15.0')
	implementation('org.apache.camel:camel-bindy:4.15.0')
	implementation('org.apache.camel:camel-mail:4.15.0')
	implementation('org.apache.camel:camel-ftp:4.15.0')
	implementation('org.apache.camel:camel-zipfile:4.15.0')
	implementation('org.apache.activemq:activemq-pool:6.1.4')
	implementation('org.apache.activemq:activemq-broker:6.1.4')
	implementation 'org.apache.activemq:activemq-client:6.1.4'
	implementation('info.freelibrary:freelib-marc4j:2.6.12')
    implementation('org.apache.poi:poi:5.5.0')
    implementation('org.apache.camel:camel-zip-deflater:4.15.0')
    implementation('org.apache.commons:commons-text:1.14.0')

	implementation('org.apache.poi:poi-ooxml:5.5.0')
	implementation 'io.micrometer:micrometer-registry-prometheus'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
	implementation 'net.logstash.logback:logstash-logback-encoder:9.0'
	compileOnly('org.projectlombok:lombok:1.18.42')
	annotationProcessor 'org.projectlombok:lombok:1.18.42'
	implementation 'io.zipkin.brave:brave:6.3.0'

	implementation 'org.springframework.cloud:spring-cloud-starter-config'
	implementation 'org.springframework.cloud:spring-cloud-starter-bus-amqp'
    implementation 'org.json:json:20250517'
    implementation 'com.google.code.gson:gson:2.13.2'

	testImplementation('org.springframework.boot:spring-boot-starter-test')
    implementation('com.mysql:mysql-connector-j:9.1.0')
    implementation 'jakarta.mail:jakarta.mail-api:2.2.0-M1'
    implementation 'com.sun.mail:smtp:2.0.2'
    implementation 'jakarta.mail:jakarta.mail-api:2.2.0-M1'

    testImplementation 'org.mockito:mockito-core:5.5.0'
	testImplementation 'org.mockito:mockito-inline:5.2.0'
    testImplementation 'org.powermock:powermock-api-mockito2:2.0.9'
    testImplementation 'org.powermock:powermock-module-junit4:2.0.9'
	implementation('org.springframework.boot:spring-boot-starter-actuator')
}

configurations.all {
	resolutionStrategy.eachDependency { DependencyResolveDetails details ->
		if (details.requested.group == 'org.apache.logging.log4j') {
			details.useVersion '3.0.0-beta2'
		}
	}
}

dependencyManagement {
	imports {
		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
	}
}

test {
	finalizedBy jacocoTestReport // report is always generated after tests run
	jvmArgs "--add-opens", "java.base/java.lang=ALL-UNNAMED"
	jvmArgs "--add-opens", "java.base/java.util=ALL-UNNAMED"
}

jacocoTestReport {
	dependsOn test // tests are required to run before generating the report
}

jacocoTestReport {
	reports {
		xml.required = true
		csv.required = false
		html.outputLocation = layout.buildDirectory.dir('jacocoHtml')
	}
}


jacoco {
	toolVersion = "0.8.14"
	reportsDirectory = layout.buildDirectory.dir('customJacocoReportDir')
}



task scsbCircJavadocs(type: Javadoc) {
	source = sourceSets.main.java
	classpath = configurations.implementation
	options.addStringOption('Xdoclint:none', '-quiet')
	String home = System.getProperty("user.home");
	destinationDir = new File(home+"/scsb-javadocs/scsb-circ");

}

bootJar {
	layered {
		enabled = true
	}
}

jar {
	enabled = false
	archiveClassifier = '' //use empty string
}

tasks.named('bootJar') {
	duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}